Already not complete and still mang bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,34 @@
     <string name="app_name">MyMovie</string>
     <string name="Open">open</string>
     <string name="Close">close</string>
+
+    <string-array name="sort_array">
+        <item>Sort By user score</item>
+        <item>Sort By public score</item>
+        <item>Sort By release date score</item>
+    </string-array>
+    <string-array name="year_array">
+        <item>2015</item>
+        <item>2016</item>
+        <item>2017</item>
+        <item>2018</item>
+        <item>2019</item>
+        <item>2020</item>
+    </string-array>
+    <string-array name="score">
+        <item>0</item>
+        <item>0.5</item>
+        <item>1</item>
+        <item>1.5</item>
+        <item>2</item>
+        <item>2.5</item>
+        <item>3</item>
+        <item>3.5</item>
+        <item>4</item>
+        <item>4.5</item>
+        <item>5</item>
+    </string-array>
+
+    <string name="title_activity_maps">Map</string>
+
 </resources>
